Step-final/deploy/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations: 
spec:
  ingressClassName: nginx
  rules:
  - host: "app.illia-step.watashinoheyadesu.pp.ua"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
